<resources>
    <string name="app_name">Musical Structure</string>
    <string name="pop">Pop</string>
    <string name="pop_info">This section includes pop songs.</string>
    <string name="electronic">Electronic</string>
    <string name="electronic_info">This section includes electronic songs.</string>
    <string name="rap">Rap</string>
    <string name="rap_info">This section includes rap songs.</string>
    <string name="classic">Classical</string>
    <string name="classic_info">This section includes classical songs.</string>
    <string name="main_info">Please choose a category to start listening music</string>
    <string name="play">Let\'s play the song</string>
    <string name="toast_message">In the future, I\'ll attach a real music player to this :)</string>
    <string name="tarkan">Tarkan</string>
    <string name="aacayipsin">Aacayipsin</string>
    <string name="kuzukuzu">Kuzu Kuzu</string>
    <string name="sezen_aksu">Sezen Aksu</string>
    <string name="sarisinim">Sarışınım</string>
    <string name="rihanna">Rihanna</string>
    <string name="california_king_bed">California King Bed</string>
    <string name="katy_perry">Katy Perry</string>
    <string name="totga">The One That Got Away</string>
    <string name="firework">Firework</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="tdomg">Tear Drops on My Guitar</string>
    <string name="madonna">Madonna</string>
    <string name="lucky_star">Lucky Star</string>
    <string name="vivaldi">Vivaldi</string>
    <string name="chopin">Chopin</string>
    <string name="tchaikovsky">Tchaikovsky</string>
    <string name="bach">J. S. Bach</string>
    <string name="mozart">Mozart</string>
    <string name="beethoven">Beethoven</string>
    <string name="schubert">Schubert</string>
    <string name="verdi">Verdi</string>
    <string name="mocm">Master Of Classical Music</string>
    <string name="snoop_dog">Snoop Dog</string>
    <string name="sdd">Snoop Doggy Dogg</string>
    <string name="fifty_cent">50 Cent</string>
    <string name="grodt">Get Rich or Die Tryin\'</string>
    <string name="dmx">DMX</string>
    <string name="idahih">It\'s Dark and Hell is Hot</string>
    <string name="eminem">Eminem</string>
    <string name="relapse">Relapse</string>
    <string name="drake">Drake</string>
    <string name="zth">0 to 100</string>
    <string name="jay_z">Jay-Z</string>
    <string name="tbp">The Blueprint</string>
    <string name="ice_cube">Ice Cube</string>
    <string name="lncl">Laugh Now, Cry Later</string>
    <string name="lmfao">LMFAO</string>
    <string name="sfpr">Sorry for Party Rocking</string>
    <string name="bdp">Black Dog Productions</string>
    <string name="bytes">Bytes</string>
    <string name="aphex">Aphex Twin</string>
    <string name="saw">Selected Ambient Works</string>
    <string name="cabaret">Cabaret Voltaire</string>
    <string name="thec">The Conversation</string>
    <string name="gas">Gas</string>
    <string name="nahuf">Nah Und Fern</string>
    <string name="underworld">Underworld</string>
    <string name="dubna">Dubnobasswithmyheadman</string>
    <string name="biosphere">Biosphere</string>
    <string name="substrata">Substrata</string>
    <string name="moodymann">Moodymann</string>
    <string name="black">Black Mahogani</string>
    <string name="demdike">Demdike Stare</string>
    <string name="tryptych">Tryptych</string>
</resources>
